// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`int16 schema test invalid values: -32769 1`] = `
"expect(received).toMatchSchema(schema)

received
  should be >= -32768
    Path:     int16.schema.json#/minimum
"
`;

exports[`int16 schema test invalid values: 1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  should be integer
    Path:     int16.schema.json#/type
"
`;

exports[`int16 schema test invalid values: 32768 1`] = `
"expect(received).toMatchSchema(schema)

received
  should be <= 32767
    Path:     int16.schema.json#/maximum
"
`;
